# hh_and_superjob_parser

./: .gitignore  README.md  Test.json  main.py  pyproject.toml
src/: AbstractCLS.py  HeadHunterAPI.py  HeadHunterAPIparse.py  SuperJobAPI.py  test_refactoring.py  user_interface_foos.py
